<resources>
    <string name="app_name">Calculator</string>
        <string name="clear">C</string>
        <string name="back">⌫</string>
        <string name="percent">%</string>
        <string name="divide">/</string>
        <string name="seven">7</string>
        <string name="eight">8</string>
        <string name="nine">9</string>
        <string name="multiply">×</string>
        <string name="four">4</string>
        <string name="five">5</string>
        <string name="six">6</string>
        <string name="subtract">-</string>
        <string name="one">1</string>
        <string name="two">2</string>
        <string name="three">3</string>
        <string name="add">+</string>
        <string name="zero">0</string>
        <string name="dot">.</string>
        <string name="equals">=</string>
    <string name="error_message">Error</string>
    <string name="result_text">Result</string>
    <string name="display_default">0</string>
    <string name="hello_text">Hello World!</string>
</resources>